--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   "dependencies": {
     "@nestjs/common": "^10.4.0",
     "@nestjs/core": "^10.4.0",
-    "@nestjs/platform-express": "^10.4.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.0",
+    "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "@prisma/client": "^5.19.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.2",
@@ -37,6 +41,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
     "prisma": "^5.19.1",
+    "@types/bcrypt": "^5.0.0",
+    "@nestjs/schedule": "^3.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
