--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "build": "nest build",
+    "swagger:generate": "ts-node src/swagger.ts",
     "lint": "eslint \"src/**/*.ts\" --max-warnings=0",
     "format": "prettier --write \"src/**/*.ts\" \"prisma/**/*.prisma\"",
     "prisma:generate": "prisma generate",
@@ -21,7 +22,9 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.0",
     "@prisma/client": "^5.19.1",
+    "@nestjs/swagger": "^7.0.0",
     "bcrypt": "^5.1.0",
+    "swagger-ui-express": "^4.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "passport": "^0.7.0",
